2007-01-12  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Make G_GNUC_INTERNAL a no-op for
	gcc 2.95.    (#329031, David Schleef, Marc Brockschmidt)
	
2007-01-12  Matthias Clasen  <mclasen@redhat.com>

	* gthread/gthread-posix.c:
	* glib/gtimer.c:
	* glib/gthread.c: Fix errors in the recently moved
	time calculations.  (#395203, Chris Wilson)

2007-01-10  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Actually link gthread against librt.
	(#394641, Marco Pesenti Gritti)

2007-01-10  Matthias Clasen  <mclasen@redhat.com>

	* glib/gkeyfile.c (g_key_file_is_key_name): Grr, allow '*' in keys,
	too.  (#394262)
	
2007-01-09  Behdad Esfahbod  <behdad@gnome.org>

	* glib/gutils.h: Use a more optimized g_bit_storage() when gcc is
	available.  (#371670, Daniel Elstner)

2007-01-08  Matthias Clasen  <mclasen@redhat.com>

	* gthread/gthread-posix.c (g_thread_impl_init): Don't
	use _SC_MONOTONIC_CLOCK unless USE_CLOCK_GETTIME is
	defined.  (#394150)

2007-01-07  Matthias Clasen  <mclasen@redhat.com>

	Don't link glib against libpthread.  (#393812)
	
	* configure.in: Link gthread against librt, not glib itself.

	* glib/gthread.h:
	* glib/gthread.c: Add a new thread function, gettime.

	* glib/gtimer.c: Use gettime instead of directly working with
	the various system interfaces.

	* gthread/gthread-impl.c:
	* gthread/gthread-posix.c:
	* gthread/gthread-win32.c: Implement gettime.
	
2007-01-07  Matthias Clasen  <mclasen@redhat.com>

	* m4macros/glib-2.0.m4: Use PKG_PROG_PKG_CONFIG.  (#392636,
	Yevgen Muntyan)

2007-01-07  Tor Lillqvist  <tml@novell.com>

	* glib/giowin32.c: Handle GIOChannels for file descriptors
	connected to the console separately. This would typically be the
	fd 0, 1, or 2 (if not redirected) in a console application. For
	such fds we don't need a separate thread, as console HANDLEs are
	waitable objects. (#359202, Michiel de Hoon)

2007-01-04  Behdad Esfahbod  <behdad@gnome.org>
